<resources>
    <string name="app_name">Android_level_1</string>
    <string name="hello">Hello Android</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="name_text">Tkachenko Roman</string>
    <string name="profession_text">android course student</string>
    <string name="information_text">place for additional information</string>
    <string name="my_contacts_button_text">"""V i e w   m y   c o n t a c t s"""</string>
    <string name="edit_profile_button_text">Edit profile</string>
    <string name="bottom_message_text">Go to settings and fill out the profile</string>

    <string name="response_ok">All fine</string>
    <string name="response_wrong_email">Incorrect E-mail Address</string>

<!--    состояния проверки пароля-->
    <string name="error_min_8_symbols_password">Minimum 8 symbols password</string>
    <string name="error_upper_case_symbol">Must contain 1 upper-case symbol</string>
    <string name="error_lower_case_symbol">Must contain 1 lower-case symbol</string>
    <string name="error_contain_number">Must contain 1 number (0-9)</string>
    <string name="error_contain_special_symbol"><![CDATA[Must contain 1 special symbol (!@#$%^&*)]]></string>
    <string name="error_include_wrong_spec_symbols"><![CDATA[Must not include symbols (~`()_+|?/.{}[],<>=-)]]></string>
    <string name="error_include_white_space">Must not include a white space</string>
    <string name="unknown_user">Unknown User</string>
    <string name="empty_password_or_email_fields">Password or E-mail fields have errors</string>

    <string name="AuthorizationQuestionText">Already have an account?</string>
    <string name="AuthorizationSingInText">Sing in</string>
    <string name="AuthorizationRegisterButtonText">R E G I S T E R</string>
    <string name="AuthorizationTextOr">or</string>
    <string name="AuthorizationButtonGoogleText" translatable="false">G O O G L E</string>
    <string name="AuthorizationRememberMeText">Remember me</string>
    <string name="AuthorizationPasswordText">Password</string>
    <string name="AuthorizationTextEmail">E-mail</string>
    <string name="AuthorizationHelperText">Fill out the profile and go to the application</string>
    <string name="AuthorizationGreetingsText">Let\'s get acquainted</string>
    <string name="AuthorizationAdditionalText">By clicking Register you agree to our Terms\n and Conditions</string>
    <string name="email_and_password_helper_text">required</string>


</resources>